# semantic-search-engine

./: .gitignore  .mcp.json  LICENSE  README.md  docker-compose.yml  embedding_pipeline_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/commands/: capture.md  explain.md  pr-reviewer.md
.claude/skills/ai-unit-validator/: SKILL.md
.claude/skills/ai-unit-validator/evals/: evals.json
.claude/skills/capture/: skill.md
.claude/skills/explain/: skill.md
.claude/skills/pr-reviewer/: skill.md
.claude/skills/semantic-search-python/: SKILL.md
.claude/skills/semantic-search-python/references/: async-patterns.md  pydantic-v2.md
docs/: phase1-implementation-plan.md  stabilization-1-analysis.md
docs/Trajectory-1-RAG-system/: chunking-guide.md  processor-implementation-summary.md  semantic-search-engine-plan.md
docs/Trajectory-2-second-brain/: ADR-second-brain-trajectory.md  implementation-plan-inbox-external.md  setup-plan-azure-function.md
functions/: function_app.py  local.settings.json.template  requirements.txt
skills/sources/: article.md  youtube.md
src/semantic_search/: __init__.py  cli.py  config.py  ingestion_cli.py  models.py  models_v2.py
src/semantic_search/chunking/: __init__.py  base.py  markdown.py
src/semantic_search/pipeline/: __init__.py  embedder.py  ingestion.py
src/semantic_search/processing/: __init__.py  external_processor.py  skills_loader.py
src/semantic_search/processors/: __init__.py  base.py  web.py
src/semantic_search/sources/: __init__.py  detector.py  extractors.py
src/semantic_search/utils/: __init__.py  fetcher.py
tests/: __init__.py  conftest.py  test_chunking.py  test_detector.py  test_embedder.py  test_external_processor.py  test_models.py  test_models_v2.py  test_processors.py
